<resources>
    <string name="app_name">loginSqlite</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="enter_your_roll_no">Enter Your Roll No.</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_homescreen">homescreen</string>
    <string name="textview">TextView</string>
</resources>
